Fix margin spacing in gallery class

--- a/main.css
+++ b/main.css
@@ -142,7 +142,7 @@ div.articles2 {
 /* page five */
 	.gallery {
 		display: inline-block
-		margin: 6 px
+		margin: 8 px
 		object-fit: gallery
 	}
 		
